# remoteexecutor-cpp

./: .gitignore  Makefile.am  README.md  configure.ac  libremoteexecutor.pc.in
include/private/: workqueue.hpp
include/remoteexecutor/: executor.hpp  work.hpp
m4/: ax_cxx_compile_stdcxx.m4
src/lib/: executor.cpp  workqueue.cpp
src/programs/: simpleexample.cpp
